# rag-cicd

./: .dockerignore  .env.example  .gitignore  AWS-SETUP-GUIDE.md  AZURE-SETUP-GUIDE.md  BEYOND-CLASS.md  DEPLOY-SETUP-GUIDE.md  Dockerfile  GCP-SETUP-GUIDE.md  PHASE1-DOCKER.md  PHASE2-TESTING.md  PHASE3-LINTING.md  PHASE4-CI-PIPELINE.md  PHASE5-SECURITY.md  PHASE6-ENVIRONMENTS.md  PHASE7-DEPLOY.md  PHASE8-TELEMETRY.md  PPT-PROMPT.md  README.md  main.py  pyproject.toml  rag_test.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-aws.yml  deploy-azure.yml  deploy.yml  security.yml
app/: agent.py  api.py  config.py  generation.py  ingestion.py  reranker.py  retrieval.py
tests/: conftest.py  test_api.py  test_generation.py  test_ingestion.py
