[project]
name = "rag-classic"
version = "0.1.0"
description = "A simple RAG Chatbot using Pinecone and LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pinecone>=5.0.0",
    "langchain-openai>=0.3.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

# -- Ruff linter configuration --
[tool.ruff]
line-length = 120             # max characters per line
target-version = "py313"      # Python version we're targeting

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors (missing whitespace, wrong indentation)
    "W",    # pycodestyle warnings (trailing whitespace, blank lines)
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (use modern Python syntax)
]
ignore = [
    "E501", # line too long - we set line-length above, this avoids double warnings
]

[tool.ruff.lint.isort]
known-first-party = ["app"]   # treat our app/ package as first-party imports

[tool.ruff.lint.per-file-ignores]
"rag_test.py" = ["E402"]      # walkthrough script has imports mid-file by design
